<resources>
  <string name="app_name">TodoApp</string>
  <string name="action_settings">Settings</string>
  <string name="todo_items_fragment_label">My tasks</string>
  <string name="add_item_fragment_label">Task</string>

  <string name="task">Task</string>
  <string name="my_tasks">My tasks</string>
  <string name="completed_tasks">Completed — %1$d</string>
  <string name="new_task">New</string>

  <string name="save_task">Save</string>
  <string name="cancel_task">Cancel</string>
  <string name="delete_task">Delete</string>
  <string name="close_task">Close</string>

  <string name="initial_description">What to do?</string>
  <string name="priority">Priority</string>
  <string name="no_priority">No</string>
  <string name="low_priority">Low</string>
  <string name="high_priority">!! High</string>

  <string name="deadline">Deadline</string>
  <string name="no_date"> </string>
  <string name="info">info</string>

  <string name="upload_error">Could not load data from server</string>
  <string name="update_error">Your changes will be uploaded as soon as you\'re back online</string>
  <string name="not_authorized_error">Authorize please</string>

  <string name="deadline_channel_name">Upcoming deadlines</string>
  <string name="deadline_channel_description">Receive notifications about upcoming deadlines</string>
  <string name="notifications">Notifications</string>
  <string name="allow_notifications">Allow</string>
  <string name="upcoming_deadline">Upcoming deadline</string>
  <string name="deadline_notification_form">%1$s: %2$s\n%3$s</string>

  <string name="theme">Theme</string>
  <string name="dark_theme">Always dark</string>
  <string name="light_theme">Always light</string>
  <string name="system_theme">System</string>
  <string name="cancel">Cancel</string>
  <string name="delete_countdown">Will be deleted in %1$d seconds</string>
</resources>