<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.CollapsingToolbarLayout
      android:id="@+id/collapsing_layout"
      android:layout_width="match_parent"
      android:layout_height="120dp"
      android:fitsSystemWindows="true"
      app:expandedTitleMarginBottom="52dp"
      app:expandedTitleMarginStart="62dp"
      app:layout_anchorGravity="center"
      app:layout_scrollFlags="scroll|exitUntilCollapsed"
      app:title="@string/my_tasks"
      app:titleCollapseMode="scale"
      app:toolbarId="@id/toolbar"
      android:layout_gravity="top">

      <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin" />

      <ToggleButton
        android:id="@+id/visibility_toggle_button"
        android:layout_width="24dp"
        android:layout_height="18dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="end|bottom"
        android:background="@drawable/visibility_toggle_button"
        android:textOff=""
        android:textOn=""
        android:visibility="gone"/>

      <com.google.android.material.textview.MaterialTextView
        android:id="@+id/completed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="62dp"
        android:layout_marginBottom="20dp"
        android:text="@string/completed_tasks"
        app:layout_collapseMode="parallax" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>
  </com.google.android.material.appbar.AppBarLayout>

  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/todo_items"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:background="@drawable/rounded_border"
      android:divider="@color/support_separator"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp" />
  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/create_task_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/add"
    android:layout_marginBottom="40dp"
    android:layout_marginEnd="12dp"
    app:maxImageSize="16dp"
    app:tint="@color/white"
    android:backgroundTint="@color/blue"
    android:layout_gravity="bottom|end"
    android:contentDescription="@string/new_task" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
